# amazon-pipeline

./: .env.example  .gitignore  README.md
apps/api/: Dockerfile  db.py  main.py  models.py  pyproject.toml
apps/api/routers/: health.py  products.py
apps/ingestor/: Dockerfile  __init__.py  extract_asins.py  provider_mock.py  provider_scraper.py  provider_scrapingbee.py  pyproject.toml  run.py
apps/ingestor/samples/: asins.txt  products.json
apps/web/: Dockerfile  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
apps/web/app/: globals.css  layout.tsx
apps/web/app/(dashboard)/: page.tsx
apps/web/app/_components/: area-trend.tsx  empty-state.tsx  error-boundary.tsx  filters.tsx  header.tsx  kpi-card.tsx  price-sparkline.tsx  products-table.tsx  recent-products.tsx  sidebar.tsx  skeletons.tsx
apps/web/app/products/: page.tsx
apps/web/app/products/[asin]/: copy-button.tsx  page.tsx
apps/web/components/ui/: button.tsx  card.tsx  dialog.tsx  select.tsx  sheet.tsx
apps/web/hooks/: use-debounce.ts
apps/web/lib/: fetcher.ts  format.ts
db/: init.sql
docs/: GETTING_ASINS.md
infra/: docker-compose.yml
